<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StationVelib"
    android:orientation="vertical"
    android:layout_margin="10dp"
    style="@style/Theme.FindMyVelib"
    android:weightSum="5">


    <TextView
        android:layout_weight="1"
        android:id="@+id/nomTv"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adresse"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/adresseTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adresseTv"
            android:textStyle="bold"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/veloDispoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veloNombreTv"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/capaciteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacite"
                android:textStyle="bold"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electrique"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/elecTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elecTv"
                    android:textStyle="bold"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meca"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/mecaTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mecaTv"
                    android:textStyle="bold"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borne"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/borneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borneTv"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/capaciteeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacite"
            android:textStyle="bold"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/favoritIb"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:backgroundTint="@color/design_default_color_background"
            android:src="@drawable/pas_fav"
            android:contentDescription="@string/etoile_favoris" />
    </LinearLayout>
</LinearLayout>
